# data-model-ddl

./: .gitignore  .prettierignore  .prettierrc.json  .prototools  README.md  package.json  pyproject.toml  tsconfig.json  tsconfig.options.json
.github/: CODEOWNERS
.github/workflows/: pull-request.yml
.moon/: toolchain.yml  workspace.yml
.moon/tasks/: bun.yml  node.yml  python.yml
