[project]
name = "python"
version = "0.0.1"
description = "Monorepo"
requires-python = "==3.11.11"
readme = "README.md"
dependencies = []


[tool.uv.workspace]
members = ["packages/sqlmodel"]

[dependency-groups]
dev = [
    "mypy==1.17.0",
    "ruff==0.12.4",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
]
